@@ -48,6 +48,7 @@
   support higher file descriptors in TM by using poll() instead of select() (USC)
   immediate job delete feedback to interactive queued jobs (USC)
   move qmgr manpage from section 8 to section 1
+  add SuSE initscripts to contrib/init.d/
 
 2.0.0p7
 
